2007-07-26  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (gnome_theme_read_meta_theme),
	(gnome_theme_color_scheme_parse), (gnome_theme_color_scheme_equal):
	* gnome-theme-info.h:
	* gtkrc-utils.c: (str_nequal), (gtkrc_get_color_scheme),
	(gtkrc_get_color_scheme_for_theme):
	* gtkrc-utils.h: move some utility code here from appearance

	* gnome-theme-apply.c: (gnome_meta_theme_set): when applying a metatheme,
	check whether to set/unset the color scheme gconf key (should fix bug
	#421866)

2007-07-25  Denis Washington <denisw@svn.gnome.org>

	* gnome-theme-apply.c: (gnome_meta_theme_set):
	* gnome-theme-info.c: (add_common_icon_theme_dir_monitor),
	(gnome_theme_init):
	* gnome-theme-info.h:
	Re-add basic support for cursor themes for X servers without the Xcursor
	extension, like the one on Solaris.

2007-07-25  Denis Washington <denisw@svn.gnome.org>

	* gnome-theme-info.h:
	* gnome-theme-info.c: (gnome_theme_read_meta_theme):
	* gnome-theme-apply.c: (gnome_meta_theme_set):
	Add support for cursor theme names saved in metathemes.

2007-07-25  Denis Washington <denisw@svn.gnome.org>

	* gnome-theme-info.c: (add_common_icon_theme_dir_monitor),
	(look_for_cursor_theme):
	Fix abug introduced by the changes in revision 7856 which caused
	cursor themes to not being found anymore.

2007-07-13  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (gdk_pixbuf_from_xcursor_image),
	(look_for_cursor_theme), (add_common_icon_theme_dir_monitor),
	(gnome_theme_cursor_info_new): general cleanup and leak-plugging
	* gnome-theme-test.c: (main): add cursor theme info

2007-07-13  Frederic Crozat  <fcrozat@mandriva.com>

	* gnome-theme-info.c: (look_for_cursor_theme):
	Fix crash when no cursor is specified in theme (fixes bug #455952).

2007-07-08  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.h: include gdk-pixbuf.h (fixes bug #454634)

2007-07-05  Denis Washington  <denisw@svn.gnome.org>

	* gnome-theme-info.[ch]: